wp-content/themes/tcs-responsive/css/style.css
/* ... */
    
    .layChallenges .actions .upDown i{
        position: absolute;
        right: 0;
        top: 2px;
        width: 13px;
        height: 24px;
        background: url(../i/arrows-ud.png) no-repeat;
        background-position: 0 8px;       
    }
    .layChallenges .actions .on .upDown i{
        background-position: 100% -13px;
        -moz-transition-duration: .3s; -webkit-transition-duration: .3s; transition-duration: .3s;    
    }
    .lt .ddWrap{
         float: left;
    }
.ddWrap{
    display: inline-block;
    vertical-align: top;
    height: 24px;
}
    .ddWrap .list{
        border: 1px solid #ccc;
        border-top: none;
    
        display: none;
        background: #fff;
}
    .ddWrap.on .list{
        display: block;
    }
    .ddWrap .list li{
        cursor: pointer;
        border-top: 1px solid #ccc;
        padding: 0 5px;
        font-size: 12px;
    
        line-height: 26px;
        text-align: left;
}
    .ddWrap .list li:hover,
    .ddWrap .list li.active{
        background: #f7f7f7;
    }
/* dataChanges */    
#mainContent .dataChanges{
    padding-top: 19px;
    font-size: 16px;
    
    min-height: 20px;
    overflow: hidden;
}
    #mainContent .dataChanges .lt{
        float: left;        
    }
    #mainContent .dataChanges .rt{
        float: right;        
    
        text-align: right;
        overflow: hidden;
}
    #mainContent .dataChanges .nextLink{
        display: inline-block;   
        padding-right: 20px;
        position: relative;
        padding-left: 40px;
        float: left;
}   
    #mainContent .dataChanges .nextLink i{
        top: 2px;
    }
    #mainContent .dataChanges .prevLink{
        display: inline-block;   
        padding-left: 20px;
        position: relative;
        float: left;
}   
    #mainContent .dataChanges .prevLink.hide{
        display: none;
    }
    #mainContent .dataChanges .prevLink i{
        top: 2px;
    }
/* data table */
.dataTable{
    width: 100%;
    font-size: 14px;
}
    .dataTable .imp{
        color: #f00;
    }
    .dataTable th,
    .dataTable td{
        border: solid #e7e7e7;
        border-width: 1px 0;
    }
    .dataTable th{
        vertical-align: middle;
        background: #f1f1f1;
        font-weight: normal;
        height: 42px;    
        font-size: 14px;
    }
    .layChallenges .dataTable .colCh{
        width: 308px;
    }
	
	
    .dataTable tbody .alt td{
        background: #f7f7f7;
    }
	
   .dataTable th.colCh{
        text-align: left;
        text-indent: 56px;
        width: 308px
    }
        .dataTable .colCh div{
            margin-right: 15px;
}
        .dataTable .colCh a{
            color: #666;
            line-height: 22px;
			padding-left: 35px;
            display: inline-block;
        
            cursor: pointer;
            position: relative;
}
            .dataTable .colCh a i{
                position: absolute;
                top: 4px;
                left: 14px;
                background: url(../i/ico-tracks.png) no-repeat;
                background-position: 0 0;
                background-color: #7ab800; 
                width: 40px;
                height: 36px;
                transition-duration: 0.2s;
                cursor: pointer;
}
        .dataTable .trackSD .colCh a i,
        .dataTable .track-develop .colCh a i{
            background-position: 0 0;
            background-color: #7ab800; 
        }
        .dataTable .trackUX .colCh a i,
        .dataTable .track-design .colCh a i{
            background-position: 0 -50px;
            background-color: #00add0; 
        }
        .dataTable .trackAn .colCh a i,
        .dataTable .track-data .colCh a i{
            background-position: 0 -100px;
            background-color: #ffae00; 
        }
        .dataTable .colCh a:hover{
            color: #FF8A00;
        }
        .dataTable .colCh a:hover i{
            box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
        }
    .dataTable .btn{
        width: 86px;
    }
    .dataTable tbody td{
        height: 95px;
        vertical-align: middle;
    }
    .dataTable tbody td{
        height: 95px;
        vertical-align: middle;
    }
.dataTable th.colTime{
    width: 224px;
}
.dataTable tbody .colTime .row{
    overflow: hidden;
    line-height: 24px;
    font-size: 12px;    
}
    .dataTable tbody .colTime .row .lbl{
        float: left; 
        width: 85px;
    }
    .dataTable tbody .colTime .row .val{
        margin-left: 90px;
    }
.dataTable th.colTLeft{
    width: 98px;
}
.dataTable th.colPur{
    width: 98px;
}
    .dataTable tbody .colTLeft, 
    .dataTable tbody .colPur,
    .dataTable tbody .colReg,
    .dataTable tbody .colSub{
        text-align: center;
        font-size: 18px;
    }

.dataTable .colPur,
.dataTable tbody .colPur{
    text-align: left;    
    text-indent: 20px;
}    
/* contest gird view */
.layChallenges #gridView{
    border-top: none;
}
.contestGrid{
    display: block;
    overflow: hidden;
    margin: 0 -29px 0 -25px;
    padding-top: 16px;
}
.contestGrid.alt{
    margin: 0 -12px -18px -12px;
}
    .contestGrid .contest{
        display: inline-block;
        border: 1px solid #e7e7e7;
    
        width: 298px;
        height: 228px;
        position: relative;
        margin: 14px 27px;
        float: left;
}
    .contestGrid.alt .contest{
        width: 318px;
        margin: 15px 12px 16px 13px;
    } 
    .contestGrid .cgCh{
        margin: 18px 0 14px;
    }
    .contestGrid .cgCh a{
        color: #666;
        position: relative;
        padding: 0 0 0 54px;  
        display: block;
        height: 36px;
        max-width: 234px;
        line-height: 18px;
        overflow: hidden; 
}
    .contestGrid .cgCh a:hover{
        color: #FF8A00;
    }
/* ... */

